--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
+    "axios": "^1.8.1",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
